@@ -4,6 +4,7 @@ import android.content.Context;
 import android.content.SharedPreferences;
 import android.net.ConnectivityManager;
 
+import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.StringRes;
 import androidx.core.content.ContextCompat;
@@ -12,6 +13,8 @@ import androidx.preference.PreferenceManager;
 import org.schabi.newpipe.R;
 import org.schabi.newpipe.extractor.MediaFormat;
 import org.schabi.newpipe.extractor.stream.AudioStream;
+import org.schabi.newpipe.extractor.stream.DeliveryMethod;
+import org.schabi.newpipe.extractor.stream.Stream;
 import org.schabi.newpipe.extractor.stream.VideoStream;
 
 import java.util.ArrayList;
@@ -20,21 +23,24 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 public final class ListHelper {
     // Video format in order of quality. 0=lowest quality, n=highest quality
     private static final List<MediaFormat> VIDEO_FORMAT_QUALITY_RANKING =
-            Arrays.asList(MediaFormat.v3GPP, MediaFormat.WEBM, MediaFormat.MPEG_4);
+            List.of(MediaFormat.v3GPP, MediaFormat.WEBM, MediaFormat.MPEG_4);
 
     // Audio format in order of quality. 0=lowest quality, n=highest quality
     private static final List<MediaFormat> AUDIO_FORMAT_QUALITY_RANKING =
-            Arrays.asList(MediaFormat.MP3, MediaFormat.WEBMA, MediaFormat.M4A);
+            List.of(MediaFormat.MP3, MediaFormat.WEBMA, MediaFormat.M4A);
     // Audio format in order of efficiency. 0=most efficient, n=least efficient
     private static final List<MediaFormat> AUDIO_FORMAT_EFFICIENCY_RANKING =
-            Arrays.asList(MediaFormat.WEBMA, MediaFormat.M4A, MediaFormat.MP3);
-
-    private static final List<String> HIGH_RESOLUTION_LIST
-            = Arrays.asList("1440p", "2160p", "1440p60", "2160p60");
+            List.of(MediaFormat.WEBMA, MediaFormat.M4A, MediaFormat.MP3);
+    // Use a Set for better performance
+    private static final Set<String> HIGH_RESOLUTION_LIST = Set.of("1440p", "2160p");
 
     private ListHelper() { }
 
@@ -105,22 +111,71 @@ public final class ListHelper {
     }
 
     /**
+     * Return a {@link Stream} list which uses the given delivery method from a {@link Stream}
+     * list.
+     *
+     * @param streamList     the original {@link Stream stream} list
+     * @param deliveryMethod the {@link DeliveryMethod delivery method}
+     * @param <S>            the item type's class that extends {@link Stream}
+     * @return a {@link Stream stream} list which uses the given delivery method
+     */
+    @NonNull
+    public static <S extends Stream> List<S> getStreamsOfSpecifiedDelivery(
+            final List<S> streamList,
+            final DeliveryMethod deliveryMethod) {
+        return getFilteredStreamList(streamList,
+                stream -> stream.getDeliveryMethod() == deliveryMethod);
+    }
+
+    /**
+     * Return a {@link Stream} list which only contains URL streams and non-torrent streams.
+     *
+     * @param streamList the original stream list
+     * @param <S>        the item type's class that extends {@link Stream}
+     * @return a stream list which only contains URL streams and non-torrent streams
+     */
+    @NonNull
+    public static <S extends Stream> List<S> getUrlAndNonTorrentStreams(
+            final List<S> streamList) {
+        return getFilteredStreamList(streamList,
+                stream -> stream.isUrl() && stream.getDeliveryMethod() != DeliveryMethod.TORRENT);
+    }
+
+    /**
+     * Return a {@link Stream} list which only contains non-torrent streams.
+     *
+     * @param streamList the original stream list
+     * @param <S>        the item type's class that extends {@link Stream}
+     * @return a stream list which only contains non-torrent streams
+     */
+    @NonNull
+    public static <S extends Stream> List<S> getNonTorrentStreams(
+            final List<S> streamList) {
+        return getFilteredStreamList(streamList,
+                stream -> stream.getDeliveryMethod() != DeliveryMethod.TORRENT);
+    }
+
+    /**
      * Join the two lists of video streams (video_only and normal videos),
      * and sort them according with default format chosen by the user.
      *
-     * @param context          context to search for the format to give preference
-     * @param videoStreams     normal videos list
-     * @param videoOnlyStreams video only stream list
-     * @param ascendingOrder   true -> smallest to greatest | false -> greatest to smallest
+     * @param context                the context to search for the format to give preference
+     * @param videoStreams           the normal videos list
+     * @param videoOnlyStreams       the video-only stream list
+     * @param ascendingOrder         true -> smallest to greatest | false -> greatest to smallest
+     * @param preferVideoOnlyStreams if video-only streams should preferred when both video-only
+     *                               streams and normal video streams are available
      * @return the sorted list
      */
-    public static List<VideoStream> getSortedStreamVideosList(final Context context,
-                                                              final List<VideoStream> videoStreams,
-                                                              final List<VideoStream>
-                                                                      videoOnlyStreams,
-                                                              final boolean ascendingOrder) {
-        final SharedPreferences preferences
-                = PreferenceManager.getDefaultSharedPreferences(context);
+    @NonNull
+    public static List<VideoStream> getSortedStreamVideosList(
+            @NonNull final Context context,
+            @Nullable final List<VideoStream> videoStreams,
+            @Nullable final List<VideoStream> videoOnlyStreams,
+            final boolean ascendingOrder,
+            final boolean preferVideoOnlyStreams) {
+        final SharedPreferences preferences =
+                PreferenceManager.getDefaultSharedPreferences(context);
 
         final boolean showHigherResolutions = preferences.getBoolean(
                 context.getString(R.string.show_higher_resolutions_key), false);
@@ -128,17 +183,37 @@ public final class ListHelper {
                 R.string.default_video_format_key, R.string.default_video_format_value);
 
         return getSortedStreamVideosList(defaultFormat, showHigherResolutions, videoStreams,
-                videoOnlyStreams, ascendingOrder);
+                videoOnlyStreams, ascendingOrder, preferVideoOnlyStreams);
     }
 
     /*//////////////////////////////////////////////////////////////////////////
     // Utils
     //////////////////////////////////////////////////////////////////////////*/
 
+    /**
+     * Get a filtered stream list, by using Java 8 Stream's API and the given predicate.
+     *
+     * @param streamList          the stream list to filter
+     * @param streamListPredicate the predicate which will be used to filter streams
+     * @param <S>                 the item type's class that extends {@link Stream}
+     * @return a new stream list filtered using the given predicate
+     */
+    private static <S extends Stream> List<S> getFilteredStreamList(
+            final List<S> streamList,
+            final Predicate<S> streamListPredicate) {
+        if (streamList == null) {
+            return Collections.emptyList();
+        }
+
+        return streamList.stream()
+                .filter(streamListPredicate)
+                .collect(Collectors.toList());
+    }
+
     private static String computeDefaultResolution(final Context context, final int key,
                                                    final int value) {
-        final SharedPreferences preferences
-                = PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences =
+                PreferenceManager.getDefaultSharedPreferences(context);
 
         // Load the preferred resolution otherwise the best available
         String resolution = preferences != null
@@ -155,19 +230,20 @@ public final class ListHelper {
     }
 
     /**
-     * Return the index of the default stream in the list, based on the parameters
-     * defaultResolution and defaultFormat.
+     * Return the index of the default stream in the list, that will be sorted in the process, based
+     * on the parameters defaultResolution and defaultFormat.
      *
      * @param defaultResolution the default resolution to look for
      * @param bestResolutionKey key of the best resolution
      * @param defaultFormat     the default format to look for
-     * @param videoStreams      list of the video streams to check
-     * @return index of the default resolution&format
+     * @param videoStreams      a mutable list of the video streams to check (it will be sorted in
+     *                          place)
+     * @return index of the default resolution&format in the sorted videoStreams
      */
     static int getDefaultResolutionIndex(final String defaultResolution,
                                          final String bestResolutionKey,
                                          final MediaFormat defaultFormat,
-                                         final List<VideoStream> videoStreams) {
+                                         @Nullable final List<VideoStream> videoStreams) {
         if (videoStreams == null || videoStreams.isEmpty()) {
             return -1;
         }
@@ -177,8 +253,8 @@ public final class ListHelper {
             return 0;
         }
 
-        final int defaultStreamIndex
-                = getVideoStreamIndex(defaultResolution, defaultFormat, videoStreams);
+        final int defaultStreamIndex =
+                getVideoStreamIndex(defaultResolution, defaultFormat, videoStreams);
 
         // this is actually an error,
         // but maybe there is really no stream fitting to the default value.
@@ -192,56 +268,57 @@ public final class ListHelper {
      * Join the two lists of video streams (video_only and normal videos),
      * and sort them according with default format chosen by the user.
      *
-     * @param defaultFormat         format to give preference
-     * @param showHigherResolutions show >1080p resolutions
-     * @param videoStreams          normal videos list
-     * @param videoOnlyStreams      video only stream list
-     * @param ascendingOrder        true -> smallest to greatest | false -> greatest to smallest
+     * @param defaultFormat          format to give preference
+     * @param showHigherResolutions  show >1080p resolutions
+     * @param videoStreams           normal videos list
+     * @param videoOnlyStreams       video only stream list
+     * @param ascendingOrder         true -> smallest to greatest | false -> greatest to smallest
+     * @param preferVideoOnlyStreams if video-only streams should preferred when both video-only
+     *                               streams and normal video streams are available
      * @return the sorted list
      */
-    static List<VideoStream> getSortedStreamVideosList(final MediaFormat defaultFormat,
-                                                       final boolean showHigherResolutions,
-                                                       final List<VideoStream> videoStreams,
-                                                       final List<VideoStream> videoOnlyStreams,
-                                                       final boolean ascendingOrder) {
-        final ArrayList<VideoStream> retList = new ArrayList<>();
+    @NonNull
+    static List<VideoStream> getSortedStreamVideosList(
+            @Nullable final MediaFormat defaultFormat,
+            final boolean showHigherResolutions,
+            @Nullable final List<VideoStream> videoStreams,
+            @Nullable final List<VideoStream> videoOnlyStreams,
+            final boolean ascendingOrder,
+            final boolean preferVideoOnlyStreams
+    ) {
+        // Determine order of streams
+        // The last added list is preferred
+        final List<List<VideoStream>> videoStreamsOrdered =
+                preferVideoOnlyStreams
+                        ? Arrays.asList(videoStreams, videoOnlyStreams)
+                        : Arrays.asList(videoOnlyStreams, videoStreams);
+
+        final List<VideoStream> allInitialStreams = videoStreamsOrdered.stream()
+                // Ignore lists that are null
+                .filter(Objects::nonNull)
+                .flatMap(List::stream)
+                // Filter out higher resolutions (or not if high resolutions should always be shown)
+                .filter(stream -> showHigherResolutions
+                        || !HIGH_RESOLUTION_LIST.contains(stream.getResolution()
+                                // Replace any frame rate with nothing
+                                .replaceAll("p\\d+$", "p")))
+                .collect(Collectors.toList());
+
         final HashMap<String, VideoStream> hashMap = new HashMap<>();
-
-        if (videoOnlyStreams != null) {
-            for (final VideoStream stream : videoOnlyStreams) {
-                if (!showHigherResolutions
-                        && HIGH_RESOLUTION_LIST.contains(stream.getResolution())) {
-                    continue;
-                }
-                retList.add(stream);
-            }
-        }
-        if (videoStreams != null) {
-            for (final VideoStream stream : videoStreams) {
-                if (!showHigherResolutions
-                        && HIGH_RESOLUTION_LIST.contains(stream.getResolution())) {
-                    continue;
-                }
-                retList.add(stream);
-            }
-        }
-
         // Add all to the hashmap
-        for (final VideoStream videoStream : retList) {
+        for (final VideoStream videoStream : allInitialStreams) {
             hashMap.put(videoStream.getResolution(), videoStream);
         }
 
         // Override the values when the key == resolution, with the defaultFormat
-        for (final VideoStream videoStream : retList) {
+        for (final VideoStream videoStream : allInitialStreams) {
             if (videoStream.getFormat() == defaultFormat) {
                 hashMap.put(videoStream.getResolution(), videoStream);
             }
         }
 
-        retList.clear();
-        retList.addAll(hashMap.values());
-        sortStreamList(retList, ascendingOrder);
-        return retList;
+        // Return the sorted list
+        return sortStreamList(new ArrayList<>(hashMap.values()), ascendingOrder);
     }
 
     /**
@@ -257,16 +334,21 @@ public final class ListHelper {
      *      1080p    ->  1080
      *      1080p60  ->  1081
      * <br>
-     *  ascendingOrder  ? 360 < 720 < 721 < 1080 < 1081
-     *  !ascendingOrder ? 1081 < 1080 < 721 < 720 < 360</pre></blockquote>
+     * ascendingOrder  ? 360 < 720 < 721 < 1080 < 1081
+     * !ascendingOrder ? 1081 < 1080 < 721 < 720 < 360</pre></blockquote>
      *
      * @param videoStreams   list that the sorting will be applied
      * @param ascendingOrder true -> smallest to greatest | false -> greatest to smallest
+     * @return The sorted list (same reference as parameter videoStreams)
      */
-    private static void sortStreamList(final List<VideoStream> videoStreams,
-                                       final boolean ascendingOrder) {
-        final Comparator<VideoStream> comparator = ListHelper::compareVideoStreamResolution;
+    private static List<VideoStream> sortStreamList(final List<VideoStream> videoStreams,
+                                                    final boolean ascendingOrder) {
+        // Compares the quality of two video streams.
+        final Comparator<VideoStream> comparator = Comparator.nullsLast(Comparator
+                .comparing(VideoStream::getResolution, ListHelper::compareVideoStreamResolution)
+                .thenComparingInt(s -> VIDEO_FORMAT_QUALITY_RANKING.indexOf(s.getFormat())));
         Collections.sort(videoStreams, ascendingOrder ? comparator : comparator.reversed());
+        return videoStreams;
     }
 
     /**
@@ -277,28 +359,11 @@ public final class ListHelper {
      * @param audioStreams List of audio streams
      * @return Index of audio stream that produces the most compact results or -1 if not found
      */
-    static int getHighestQualityAudioIndex(@Nullable MediaFormat format,
-                                           final List<AudioStream> audioStreams) {
-        int result = -1;
-        if (audioStreams != null) {
-            while (result == -1) {
-                AudioStream prevStream = null;
-                for (int idx = 0; idx < audioStreams.size(); idx++) {
-                    final AudioStream stream = audioStreams.get(idx);
-                    if ((format == null || stream.getFormat() == format)
-                            && (prevStream == null || compareAudioStreamBitrate(prevStream, stream,
-                                    AUDIO_FORMAT_QUALITY_RANKING) < 0)) {
-                        prevStream = stream;
-                        result = idx;
-                    }
-                }
-                if (result == -1 && format == null) {
-                    break;
-                }
-                format = null;
-            }
-        }
-        return result;
+    static int getHighestQualityAudioIndex(@Nullable final MediaFormat format,
+                                           @Nullable final List<AudioStream> audioStreams) {
+        return getAudioIndexByHighestRank(format, audioStreams,
+                // Compares descending (last = highest rank)
+                getAudioStreamComparator(AUDIO_FORMAT_QUALITY_RANKING));
     }
 
     /**
@@ -309,28 +374,51 @@ public final class ListHelper {
      * @param audioStreams List of audio streams
      * @return Index of audio stream that produces the most compact results or -1 if not found
      */
-    static int getMostCompactAudioIndex(@Nullable MediaFormat format,
-                                        final List<AudioStream> audioStreams) {
-        int result = -1;
-        if (audioStreams != null) {
-            while (result == -1) {
-                AudioStream prevStream = null;
-                for (int idx = 0; idx < audioStreams.size(); idx++) {
-                    final AudioStream stream = audioStreams.get(idx);
-                    if ((format == null || stream.getFormat() == format)
-                            && (prevStream == null || compareAudioStreamBitrate(prevStream, stream,
-                                    AUDIO_FORMAT_EFFICIENCY_RANKING) > 0)) {
-                        prevStream = stream;
-                        result = idx;
-                    }
-                }
-                if (result == -1 && format == null) {
-                    break;
-                }
-                format = null;
-            }
+    static int getMostCompactAudioIndex(@Nullable final MediaFormat format,
+                                        @Nullable final List<AudioStream> audioStreams) {
+        return getAudioIndexByHighestRank(format, audioStreams,
+                // The "reversed()" is important -> Compares ascending (first = highest rank)
+                getAudioStreamComparator(AUDIO_FORMAT_EFFICIENCY_RANKING).reversed());
+    }
+
+    private static Comparator<AudioStream> getAudioStreamComparator(
+            final List<MediaFormat> formatRanking) {
+        return Comparator.nullsLast(Comparator.comparingInt(AudioStream::getAverageBitrate))
+                .thenComparingInt(stream -> formatRanking.indexOf(stream.getFormat()));
+    }
+
+    /**
+     * Get the audio-stream from the list with the highest rank, depending on the comparator.
+     * Format will be ignored if it yields no results.
+     *
+     * @param targetedFormat The target format type or null if it doesn't matter
+     * @param audioStreams   List of audio streams
+     * @param comparator     The comparator used for determining the max/best/highest ranked value
+     * @return Index of audio stream that produces the highest ranked result or -1 if not found
+     */
+    private static int getAudioIndexByHighestRank(@Nullable final MediaFormat targetedFormat,
+                                                  @Nullable final List<AudioStream> audioStreams,
+                                                  final Comparator<AudioStream> comparator) {
+        if (audioStreams == null || audioStreams.isEmpty()) {
+            return -1;
         }
-        return result;
+
+        final AudioStream highestRankedAudioStream = audioStreams.stream()
+                .filter(audioStream -> targetedFormat == null
+                        || audioStream.getFormat() == targetedFormat)
+                .max(comparator)
+                .orElse(null);
+
+        if (highestRankedAudioStream == null) {
+            // Fallback: Ignore targetedFormat if not null
+            if (targetedFormat != null) {
+                return getAudioIndexByHighestRank(null, audioStreams, comparator);
+            }
+            // targetedFormat is already null -> return -1
+            return -1;
+        }
+
+        return audioStreams.indexOf(highestRankedAudioStream);
     }
 
     /**
@@ -352,8 +440,9 @@ public final class ListHelper {
      * @param videoStreams     the available video streams
      * @return the index of the preferred video stream
      */
-    static int getVideoStreamIndex(final String targetResolution, final MediaFormat targetFormat,
-                                   final List<VideoStream> videoStreams) {
+    static int getVideoStreamIndex(@NonNull final String targetResolution,
+                                   final MediaFormat targetFormat,
+                                   @NonNull final List<VideoStream> videoStreams) {
         int fullMatchIndex = -1;
         int fullMatchNoRefreshIndex = -1;
         int resMatchOnlyIndex = -1;
@@ -362,8 +451,9 @@ public final class ListHelper {
         final String targetResolutionNoRefresh = targetResolution.replaceAll("p\\d+$", "p");
 
         for (int idx = 0; idx < videoStreams.size(); idx++) {
-            final MediaFormat format
-                    = targetFormat == null ? null : videoStreams.get(idx).getFormat();
+            final MediaFormat format = targetFormat == null
+                    ? null
+                    : videoStreams.get(idx).getFormat();
             final String resolution = videoStreams.get(idx).getResolution();
             final String resolutionNoRefresh = resolution.replaceAll("p\\d+$", "p");
 
@@ -414,7 +504,7 @@ public final class ListHelper {
      * @param videoStreams      the list of video streams to check
      * @return the index of the preferred video stream
      */
-    private static int getDefaultResolutionWithDefaultFormat(final Context context,
+    private static int getDefaultResolutionWithDefaultFormat(@NonNull final Context context,
                                                              final String defaultResolution,
                                                              final List<VideoStream> videoStreams) {
         final MediaFormat defaultFormat = getDefaultFormat(context,
@@ -423,11 +513,11 @@ public final class ListHelper {
                 context.getString(R.string.best_resolution_key), defaultFormat, videoStreams);
     }
 
-    private static MediaFormat getDefaultFormat(final Context context,
+    private static MediaFormat getDefaultFormat(@NonNull final Context context,
                                                 @StringRes final int defaultFormatKey,
                                                 @StringRes final int defaultFormatValueKey) {
-        final SharedPreferences preferences
-                = PreferenceManager.getDefaultSharedPreferences(context);
+        final SharedPreferences preferences =
+                PreferenceManager.getDefaultSharedPreferences(context);
 
         final String defaultFormat = context.getString(defaultFormatValueKey);
         final String defaultFormatString = preferences.getString(
@@ -443,8 +533,8 @@ public final class ListHelper {
         return defaultMediaFormat;
     }
 
-    private static MediaFormat getMediaFormatFromKey(final Context context,
-                                                     final String formatKey) {
+    private static MediaFormat getMediaFormatFromKey(@NonNull final Context context,
+                                                     @NonNull final String formatKey) {
         MediaFormat format = null;
         if (formatKey.equals(context.getString(R.string.video_webm_key))) {
             format = MediaFormat.WEBM;
@@ -460,57 +550,21 @@ public final class ListHelper {
         return format;
     }
 
-    // Compares the quality of two audio streams
-    private static int compareAudioStreamBitrate(final AudioStream streamA,
-                                                 final AudioStream streamB,
-                                                 final List<MediaFormat> formatRanking) {
-        if (streamA == null) {
-            return -1;
-        }
-        if (streamB == null) {
+    private static int compareVideoStreamResolution(@NonNull final String r1,
+                                                    @NonNull final String r2) {
+        try {
+            final int res1 = Integer.parseInt(r1.replaceAll("0p\\d+$", "1")
+                    .replaceAll("[^\\d.]", ""));
+            final int res2 = Integer.parseInt(r2.replaceAll("0p\\d+$", "1")
+                    .replaceAll("[^\\d.]", ""));
+            return res1 - res2;
+        } catch (final NumberFormatException e) {
+            // Consider the first one greater because we don't know if the two streams are
+            // different or not (a NumberFormatException was thrown so we don't know the resolution
+            // of one stream or of all streams)
             return 1;
         }
-        if (streamA.getAverageBitrate() < streamB.getAverageBitrate()) {
-            return -1;
-        }
-        if (streamA.getAverageBitrate() > streamB.getAverageBitrate()) {
-            return 1;
-        }
-
-        // Same bitrate and format
-        return formatRanking.indexOf(streamA.getFormat())
-                - formatRanking.indexOf(streamB.getFormat());
     }
-
-    private static int compareVideoStreamResolution(final String r1, final String r2) {
-        final int res1 = Integer.parseInt(r1.replaceAll("0p\\d+$", "1")
-                .replaceAll("[^\\d.]", ""));
-        final int res2 = Integer.parseInt(r2.replaceAll("0p\\d+$", "1")
-                .replaceAll("[^\\d.]", ""));
-        return res1 - res2;
-    }
-
-    // Compares the quality of two video streams.
-    private static int compareVideoStreamResolution(final VideoStream streamA,
-                                                    final VideoStream streamB) {
-        if (streamA == null) {
-            return -1;
-        }
-        if (streamB == null) {
-            return 1;
-        }
-
-        final int resComp = compareVideoStreamResolution(streamA.getResolution(),
-                streamB.getResolution());
-        if (resComp != 0) {
-            return resComp;
-        }
-
-        // Same bitrate and format
-        return ListHelper.VIDEO_FORMAT_QUALITY_RANKING.indexOf(streamA.getFormat())
-                - ListHelper.VIDEO_FORMAT_QUALITY_RANKING.indexOf(streamB.getFormat());
-    }
-
 
     private static boolean isLimitingDataUsage(final Context context) {
         return getResolutionLimit(context) != null;
@@ -522,11 +576,11 @@ public final class ListHelper {
      * @param context App context
      * @return maximum resolution allowed or null if there is no maximum
      */
-    private static String getResolutionLimit(final Context context) {
+    private static String getResolutionLimit(@NonNull final Context context) {
         String resolutionLimit = null;
         if (isMeteredNetwork(context)) {
-            final SharedPreferences preferences
-                    = PreferenceManager.getDefaultSharedPreferences(context);
+            final SharedPreferences preferences =
+                    PreferenceManager.getDefaultSharedPreferences(context);
             final String defValue = context.getString(R.string.limit_data_usage_none_key);
             final String value = preferences.getString(
                     context.getString(R.string.limit_mobile_data_usage_key), defValue);
@@ -541,9 +595,9 @@ public final class ListHelper {
      * @param context App context
      * @return {@code true} if connected to a metered network
      */
-    public static boolean isMeteredNetwork(final Context context) {
-        final ConnectivityManager manager
-                = ContextCompat.getSystemService(context, ConnectivityManager.class);
+    public static boolean isMeteredNetwork(@NonNull final Context context) {
+        final ConnectivityManager manager =
+                ContextCompat.getSystemService(context, ConnectivityManager.class);
         if (manager == null || manager.getActiveNetworkInfo() == null) {
             return false;
         }
